Removed dark mode temporarily due to visual bug. Fixed material icon bug not loading

--- a/generalpurposeapplication.client/src/styles.scss
+++ b/generalpurposeapplication.client/src/styles.scss
@@ -27,3 +27,7 @@ table {
     padding-right: 1rem;
   }
 }
+
+.mat-icon.material-icons {
+  font-family: 'Material Icons' !important;
+}
